[package]

name = "pico-sys"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-pico-sys.git"
description = "Bindings to the PicoHTTPParser."
readme = "README.md"
license = "MIT"

build = "build.rs"

[build-dependencies]
gcc = "*"

[dependencies]
libc = "*"

